name:                ascii-progress
version:             0.2.1.2
synopsis:            A simple progress bar for the console.
description:
    A simple Haskell progress bar for the console. Heavily borrows from TJ
    Holowaychuk's Node.JS project
    <https://github.com/tj/node-progress progress>
    .
    <https://github.com/yamadapc/haskell-ascii-progress github>

homepage:            https://github.com/yamadapc/haskell-ascii-progress
license:             MIT
license-file:        LICENSE
author:              Pedro Tacla Yamada
maintainer:          tacla.yamada@gmail.com
copyright:           (c) 2015 Pedro Tacla Yamada
category:            System
build-type:          Simple
cabal-version:       >=1.10
source-repository head
  type:     git
  location: git://github.com/yamadapc/haskell-ascii-progress

flag examples
  description: Build the examples
  default:     False

library
  exposed-modules:     System.Console.AsciiProgress
                     , System.Console.AsciiProgress.Internal
  build-depends:       ansi-terminal
                     , async >= 2.0.1.5
                     , base >=4 && <5
                     , data-default >= 0.5.3
                     , time >= 1.4.2
  hs-source-dirs:      lib
  default-language:    Haskell2010

executable example
  main-is:             Example.hs
  build-depends:       ansi-terminal
                     , async >= 2.0.1.5
                     , base >=4 && <5
                     , data-default >= 0.5.3
                     , time >= 1.4.2
  hs-source-dirs:      lib
                     , bin
  if flag(examples)
   buildable: True
  else
   buildable: False
  default-language:    Haskell2010

executable download-example
  main-is:             DownloadExample.hs
  build-depends:       HTTP
                     , ansi-terminal
                     , async >= 2.0.1.5
                     , base >=4 && <5
                     , bytestring
                     , data-default >= 0.5.3
                     , time >= 1.4.2
                     , conduit >= 1.2
                     , http-conduit >= 2.1
                     , http-types >= 0.8
                     , transformers >= 0.3
  hs-source-dirs:      lib
                     , bin
  if flag(examples)
   buildable: True
  else
   buildable: False
  default-language:    Haskell2010

executable multi-example
  main-is:             MultiExample.hs
  build-depends:       ansi-terminal
                     , async >= 2.0.1.5
                     , base >=4 && <5
                     , data-default >= 0.5.3
                     , time >= 1.4.2
  hs-source-dirs:      lib
                     , bin
  if flag(examples)
   buildable: True
  else
   buildable: False
  default-language:    Haskell2010

test-suite hspec
  type:                exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:       ansi-terminal
                     , async >= 2.0.1.5
                     , base >=4 && <5
                     , data-default >= 0.5.3
                     , hspec >=2.1 && <3
                     , time >= 1.4.2
                     , QuickCheck >= 2.6
  hs-source-dirs:      lib
                     , test
  default-language:    Haskell2010
